use kotlin coroutines instead of fork-join pool and completable future (part 14 - don't execute project.save in EDT)
GitOrigin-RevId: 3cc8d4b714a36fa0c3d224cb7cc2833855409395